Move to Java 11, and remove custom immutable collections