@@ -1,12 +1,15 @@
 package be.twofold.common.seq;
 
-import be.twofold.common.collect.*;
-import org.junit.jupiter.api.*;
+import org.junit.jupiter.api.Test;
 
-import java.util.function.*;
+import java.util.List;
+import java.util.Map;
+import java.util.function.Function;
 
-import static be.twofold.common.seq.Sequences.*;
-import static org.assertj.core.api.Assertions.*;
+import static be.twofold.common.seq.Sequences.Empty;
+import static be.twofold.common.seq.Sequences.Strings;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatNullPointerException;
 
 class SeqGroupByTest {
 
@@ -16,9 +19,9 @@ class SeqGroupByTest {
 
         assertThat(Empty.groupBy(String::length)).isEmpty();
         assertThat(Strings.groupBy(String::length)).containsOnly(
-            ImmutableMap.entry(3, ImmutableList.of("one", "two")),
-            ImmutableMap.entry(4, ImmutableList.of("four", "five")),
-            ImmutableMap.entry(5, ImmutableList.of("three"))
+            Map.entry(3, List.of("one", "two")),
+            Map.entry(4, List.of("four", "five")),
+            Map.entry(5, List.of("three"))
         );
     }
 
@@ -29,9 +32,9 @@ class SeqGroupByTest {
 
         assertThat(Empty.groupBy(String::length, s -> s.charAt(0))).isEmpty();
         assertThat(Strings.groupBy(String::length, s -> s.charAt(0))).containsOnly(
-            ImmutableMap.entry(3, ImmutableList.of('o', 't')),
-            ImmutableMap.entry(4, ImmutableList.of('f', 'f')),
-            ImmutableMap.entry(5, ImmutableList.of('t'))
+            Map.entry(3, List.of('o', 't')),
+            Map.entry(4, List.of('f', 'f')),
+            Map.entry(5, List.of('t'))
         );
     }
 
